# QCproject2

./: GAUSIAN.ipynb  Shifterd_gaussian.ipynb  beams.ipynb  gaussian_beam.py  grathing.py  pyproject.toml  smooth_sqaure_wave.ipynb  square_wave.ipynb  trial.ipynb  trial2.ipynb  tryout_1.ipynb  tryout_beam.ipynb  tryout_beam_rough.ipynb
